--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "gatsby": "^0.12.45",
     "object-assign": "^4.1.1",
     "react-helmet": "^5.0.3",
+    "react-redux": "5.0.4",
     "react-typography": "^0.15.0",
+    "redux": "3.6.0",
+    "redux-api-middleware": "1.0.3",
     "typography": "^0.15.8",
     "typography-breakpoint-constants": "^0.14.0",
     "typography-plugin-code": "^0.15.9"
